Fix: show menu on top on mobile

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  z-index: 1;
+  z-index: 5;
 }
 
 .logo img {
